--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -27,8 +27,16 @@
 
 @import "blocks/tabs.scss";
 
-@import "footer.scss";
+@import "blocks/_project.scss";
 
+@import "blocks/_about.scss";
+
+@import "blocks/_contact.scss";
+@import "blocks/form.scss";
+@import "blocks/social.scss";
+
+@import "footer.scss";
+@import "blocks/address.scss";
 
 
 
