--- a/app/scss/blocks/btn.scss
+++ b/app/scss/blocks/btn.scss
@@ -51,6 +51,21 @@
     }
   }
 
+  &__send{
+    width: 100%;
+    max-width: 380px;
+    background: #000000;
+    padding: 13px 15px;
+
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: #FFFFFF;
+  }
 
   &--hide{
     display: none;
