--- a/app/scss/footer.scss
+++ b/app/scss/footer.scss
@@ -1,5 +1,8 @@
 .footer {
-
+  padding-bottom: 20px;
+  @media(min-width: 768px){
+    padding-bottom: 40px;
+  }
   &__container {
     display: flex;
     flex-wrap: wrap;
@@ -17,33 +20,5 @@
       margin-bottom: 0;
     }
   }
-  &__address{
-    margin-left: auto;
-    @media(min-width: 768px){
-      margin-left: 80px;
-    }
-  }
-  &__list {
-    list-style: none;
-  }
 
-  &__item {
-    &:not(:last-child) {
-      margin-bottom: 10px;
-    }
-  }
-
-  &__link {
-    text-decoration: none;
-
-    font-family: "Roboto", sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #000000;
-
-  }
 }
