--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -6,7 +6,7 @@
   width: 100%;
   z-index: 20;
   padding-top: 20px;
-
+  transition: all 0.5s ease-in-out;
   &__container {
     display: flex;
     justify-content: space-between;
@@ -19,5 +19,13 @@
       opacity: 1;
       overflow: auto;
     }
+  }
+
+  &__fixed{
+    padding-top: 10px;
+    background: #FFFFFF;
+    box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+    padding-bottom: 10px;
+    transition: all 0.5s ease-in-out;
   }
 }
