--- a/app/scss/blocks/_work.scss
+++ b/app/scss/blocks/_work.scss
@@ -18,10 +18,13 @@
   &__list{
     list-style: none;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 40px;
 
     margin-bottom: 40px;
+    @media(min-width: 768px){
+      grid-template-columns: 1fr 1fr;
+    }
   }
   &__item{
    //&:not(:last-child){
