--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -6,7 +6,7 @@
   width: 100%;
   z-index: 20;
   padding-top: 20px;
-  transition: all 0.5s ease-in-out;
+  //transition: all 0.5s ease-in-out;
   &__container {
     display: flex;
     justify-content: space-between;
@@ -26,6 +26,6 @@
     background: #FFFFFF;
     box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
     padding-bottom: 10px;
-    transition: all 0.5s ease-in-out;
+    //transition: all 0.5s ease-in-out;
   }
 }
