--- a/app/scss/blocks/navigation.scss
+++ b/app/scss/blocks/navigation.scss
@@ -72,6 +72,7 @@
     letter-spacing: 0em;
     text-align: left;
     color: #000000;
+    position: relative;
     @media(min-width: 768px){
       font-size: 32px;
       line-height: 32px;
@@ -94,5 +95,22 @@
     width: auto;
     height: auto;
     transform: none;
+  }
+
+
+
+  &__icon{
+
+    &--move{
+      @media(any-hover: hover){
+        &:hover{
+          position: absolute;
+          top: calc(100% - 21px);
+          left: calc(100% - 22px);
+          transform: translate(-50%, -50%);
+        }
+      }
+
+    }
   }
 }
