--- a/app/scss/blocks/navigation.scss
+++ b/app/scss/blocks/navigation.scss
@@ -73,6 +73,16 @@
     text-align: left;
     color: #000000;
     position: relative;
+
+    display: flex;
+    align-items: flex-end;
+
+    @media(any-hover: hover){
+      &:hover .navigation__icon--move{
+        transition: all 0.5s ease-in-out;
+        transform: translate(-3px, 1px);
+      }
+    }
     @media(min-width: 768px){
       font-size: 32px;
       line-height: 32px;
@@ -100,17 +110,12 @@
 
 
   &__icon{
-
+    transform: translate(-5px, 1px);
     &--move{
-      @media(any-hover: hover){
-        &:hover{
-          position: absolute;
-          top: calc(100% - 21px);
-          left: calc(100% - 22px);
-          transform: translate(-50%, -50%);
-        }
-      }
-
-    }
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      transform: translate(-5px, 1px);
+      transition: all 0.5s ease-in-out;    }
   }
 }
