--- a/app/scss/blocks/navigation.scss
+++ b/app/scss/blocks/navigation.scss
@@ -78,9 +78,9 @@
     align-items: flex-end;
 
     @media(any-hover: hover){
-      &:hover .navigation__icon--move{
+      &:hover .navigation__icon{
         transition: all 0.5s ease-in-out;
-        transform: translate(-3px, 1px);
+        transform: translate(0px, 0px);
       }
     }
     @media(min-width: 768px){
@@ -115,7 +115,7 @@
       position: absolute;
       bottom: 0;
       right: 0;
-      transform: translate(-5px, 1px);
+      transform: translate(5px, -1px);
       transition: all 0.5s ease-in-out;    }
   }
 }
