--- a/app/scss/blocks/navigation.scss
+++ b/app/scss/blocks/navigation.scss
@@ -111,6 +111,7 @@
 
   &__icon{
     transform: translate(-5px, 1px);
+    transition: all 0.5s ease-in-out;
     &--move{
       position: absolute;
       bottom: 0;
