--- a/app/scss/blocks/navigation.scss
+++ b/app/scss/blocks/navigation.scss
@@ -80,7 +80,10 @@
     @media(any-hover: hover){
       &:hover .navigation__icon{
         transition: all 0.5s ease-in-out;
-        transform: translate(0px, 0px);
+        transform: translate(-5px, 1px);
+        &--move{
+          transform: translate(5px, -1px);
+        }
       }
     }
     @media(min-width: 768px){
@@ -110,13 +113,14 @@
 
 
   &__icon{
-    transform: translate(-5px, 1px);
+    transform: translate(0px, 0px);
+
     transition: all 0.5s ease-in-out;
     &--move{
       position: absolute;
       bottom: 0;
       right: 0;
-      transform: translate(5px, -1px);
+
       transition: all 0.5s ease-in-out;    }
   }
 }
