--- a/app/scss/blocks/_connection.scss
+++ b/app/scss/blocks/_connection.scss
@@ -1,13 +1,13 @@
 .connection{
-  padding-top: 0;
-  @media(min-width: 768px){
-    padding-top: 40px;
-  }
+
+
   &__wrapper{
+    margin-bottom: 100px;
     @media(min-width: 768px){
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+      margin-bottom: 160px;
     }
   }
   &__title{
@@ -29,6 +29,28 @@
     }
     @media(min-width: 992px){
       margin-bottom: 0;
+    }
+  }
+  &__link{
+    display: inline-block;
+    text-decoration: none;
+
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: #FFFFFF;
+    padding: 15px 80px;
+
+    width: 100%;
+    max-width: 350px;
+    background-color: #000000;
+    @media(min-width: 768px){
+      font-size: 20px;
+      line-height: 20px;
     }
   }
 }
