--- a/app/scss/blocks/_connection.scss
+++ b/app/scss/blocks/_connection.scss
@@ -51,7 +51,7 @@
 
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     @media(min-width: 768px){
       font-size: 20px;
       line-height: 20px;
