--- a/app/scss/blocks/_contact.scss
+++ b/app/scss/blocks/_contact.scss
@@ -1,17 +1,21 @@
 .contact {
   padding-top: 110px;
-  @media(min-width: 992px){
+  @media(min-width: 992px) {
     padding-top: 210px;
   }
+
   &__wrapper {
-    display: flex;
-    flex-direction: column;
+    //display: flex;
+    //flex-direction: column;
+    //
+    //position: relative;
+    display: grid;
+    grid-template-columns: 1fr;
 
-    position: relative;
+    @media(min-width: 992px) {
+      //flex-direction: row;
+      grid-template-columns: 1fr 1fr;
 
-
-    @media(min-width: 992px){
-      flex-direction: row;
       width: 100%;
       max-width: 850px;
       margin: 0 auto;
@@ -36,10 +40,22 @@
     }
   }
 
-  &__wrap{
-   @media(min-width: 992px){
-     position: absolute;
-     bottom: 0;
-   }
+  &__form {
+    grid-row: 2/3;
+    grid-column: 1/-1;
+    @media(min-width: 992px){
+      grid-column: 2/3;
+      grid-row: 1/3;
+    }
+  }
+
+  &__wrap {
+    //@media(min-width: 992px) {
+    //  position: absolute;
+    //  bottom: 0;
+    //}
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
   }
 }
