--- a/app/scss/blocks/_start.scss
+++ b/app/scss/blocks/_start.scss
@@ -7,32 +7,30 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  background-color: #bfbfbf;
+
+  &__container {
+    z-index: 2;
+  }
+
   &__bg {
-    &--video {
-      video {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -2;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        pointer-events: none;
-      }
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+
+    video {
+      object-fit: cover;
+      pointer-events: none;
+    }
+    img {
+      object-fit: cover;
+      object-position: center;
     }
 
-    &--img {
-      img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -2;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
-      }
-    }
   }
 
   &__title {
@@ -43,12 +41,8 @@
     line-height: 96px;
     letter-spacing: 0em;
     text-align: left;
-
     color: #FFFFFF;
-
-    width: 100%;
-    max-width: 452px;
-    @media(min-width: 768px){
+    @media(min-width: 768px) {
       font-size: 120px;
       line-height: 144px;
     }
