--- a/app/scss/blocks/_start.scss
+++ b/app/scss/blocks/_start.scss
@@ -22,15 +22,16 @@
     width: 100%;
     height: 100%;
 
-    video {
-      object-fit: cover;
-      pointer-events: none;
-    }
+    video,
     img {
+      width: 100%;
+      height: 100%;
+
       object-fit: cover;
       object-position: center;
-    }
 
+      pointer-events: none;
+    }
   }
 
   &__title {
@@ -42,6 +43,7 @@
     letter-spacing: 0em;
     text-align: left;
     color: #FFFFFF;
+
     @media(min-width: 768px) {
       font-size: 120px;
       line-height: 144px;
