страница about добавил стили и обверну картинки в div

--- a/app/scss/blocks/_about.scss
+++ b/app/scss/blocks/_about.scss
@@ -104,6 +104,9 @@
     max-height: 180px;
 
     object-fit: cover;
+    object-position: center;
+
+    overflow: hidden;
     margin-bottom: 20px;
     @media(min-width: 460px){
       max-height: 260px;
