--- a/app/scss/blocks/_connection.scss
+++ b/app/scss/blocks/_connection.scss
@@ -1,16 +1,18 @@
-.connection{
+.connection {
 
 
-  &__wrapper{
-    margin-bottom: 100px;
-    @media(min-width: 768px){
+  &__wrapper {
+
+    // margin-bottom: 100px;
+    @media(min-width: 768px) {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      margin-bottom: 160px;
+      // margin-bottom: 160px;
     }
   }
-  &__title{
+
+  &__title {
     font-family: "Roboto", sans-serif;
     font-size: 32px;
     font-style: normal;
@@ -23,15 +25,18 @@
     width: 100%;
     max-width: 580px;
     margin-bottom: 24px;
-    @media(min-width: 768px){
+
+    @media(min-width: 768px) {
       font-size: 56px;
       line-height: 56px;
     }
-    @media(min-width: 992px){
+
+    @media(min-width: 992px) {
       margin-bottom: 0;
     }
   }
-  &__link{
+
+  &__link {
     display: inline-block;
     text-decoration: none;
 
@@ -52,7 +57,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    @media(min-width: 768px){
+
+    @media(min-width: 768px) {
       font-size: 20px;
       line-height: 20px;
     }
