--- a/app/scss/blocks/_work.scss
+++ b/app/scss/blocks/_work.scss
@@ -23,12 +23,15 @@
     list-style: none;
     display: grid;
     grid-template-columns: 1fr;
-    gap: 40px;
+    row-gap: 40px;
 
     margin-bottom: 40px;
 
     @media(min-width: 768px) {
       grid-template-columns: 1fr 1fr;
+
+      row-gap: 40px;
+      column-gap: 20px;
     }
 
     &--mod {
@@ -60,12 +63,12 @@
       font-family: "Roboto", sans-serif;
       font-size: 20px;
       font-style: normal;
-      font-weight: 400;
+      font-weight: 700;
       line-height: 20px;
       letter-spacing: 0em;
       text-align: left;
       color: #000000;
-      margin-bottom: 12px;
+      margin-bottom: 10px;
 
       @media(min-width: 768px) {
         font-size: 28px;
@@ -77,11 +80,18 @@
 
   &__wrap {
     position: relative;
+
+    height: calc(220 / 320 * 100vw);
+
     margin-bottom: 20px;
     cursor: pointer;
     transition: all 0.5s ease-in-out;
 
     @media(min-width: 768px) {
+      height: 400px;
+
+      overflow: hidden;
+
       margin-bottom: 26px;
     }
 
@@ -91,26 +101,19 @@
       top: 0;
       left: 0;
       width: 100%;
-      max-width: 660px;
-      height: 98%;
+      height: 100%;
       background: rgba(0, 0, 0, 0.25);
       opacity: 0;
       transition: all 0.5s ease-in-out;
-
-      @media(min-width: 768px) {
-        height: 99%;
-      }
     }
 
 
   }
 
   &__img {
-    @media(max-width: 576px) {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   &__category {
