--- a/app/scss/footer.scss
+++ b/app/scss/footer.scss
@@ -1,29 +1,31 @@
 .footer {
-  padding-bottom: 20px;
-  @media(min-width: 768px){
-    padding-top: 80px;
-    padding-bottom: 40px;
+  padding-bottom: 40px;
+
+  @media(min-width: 768px) {
+    padding-bottom: 60px;
+
+    &--mod {
+      padding-top: 20px;
+    }
   }
+
   &__container {
-    display: flex;
+    display: none;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
   }
-  &__wrapper{
+
+  &__wrapper {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 28px;
-    @media(min-width: 768px){
+
+    @media(min-width: 768px) {
       width: max-content;
       margin-bottom: 0;
-    }
-  }
-  &--mod{
-    @media(min-width: 768px){
-      padding-bottom: 150px;
     }
   }
 }
