--- a/app/scss/general.scss
+++ b/app/scss/general.scss
@@ -1,5 +1,11 @@
+html {
+  &.block {
+    overflow: hidden;
+  }
+}
+
 body {
-  font-family: 'Roboto',sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-size: 16px;
   line-height: 22px;
@@ -15,10 +21,11 @@ body {
   }
 }
 
-.main{
+.main {
   overflow: hidden;
   flex: 1 0 auto;
 }
+
 *,
 *::before,
 *::after {
@@ -38,7 +45,7 @@ img {
   overflow-y: hidden
 }
 
-.overlay{
+.overlay {
   opacity: 0;
   visibility: hidden;
 
@@ -50,6 +57,7 @@ img {
   background-color: rgba(15, 58, 76, 0.7);
   z-index: 18;
   transition: 0.3s all;
+
   &.active-overlay {
     opacity: 1;
     visibility: visible;
