--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -6,6 +6,7 @@
   width: 100%;
   z-index: 20;
   padding-top: 20px;
+
   //transition: all 0.5s ease-in-out;
   &__container {
     display: flex;
@@ -13,15 +14,19 @@
     align-items: center;
   }
 
-  &--open{
-    .navigation{
+  &--open {
+    .navigation {
+      display: flex;
+
+      align-items: center;
+
       transform: translateY(0);
       opacity: 1;
       overflow: auto;
     }
   }
 
-  &__fixed{
+  &__fixed {
     padding-top: 10px;
     background: #FFFFFF;
     box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
