--- a/app/scss/blocks/logo.scss
+++ b/app/scss/blocks/logo.scss
@@ -1,16 +1,21 @@
-.logo{
+.logo {
   display: flex;
   position: relative;
 
+  & .navigation__icon {
+    transition: all 0.5s ease-in-out;
+    transform: translate(-1px, 0.25px);
 
-  @media(any-hover: hover){
+    &--move {
+      transform: translate(1px, -0.25px);
+    }
+  }
+
+  @media(any-hover: hover) {
     &:hover .navigation__icon {
-      transition: all 0.5s ease-in-out;
-      transform: translate(-1px, 0.25px);
+      transform: translate(0, 0);
 
-      &--move {
-        transform: translate(1px, -0.25px);
-      }
+      transition: all 0.5s ease-in-out;
     }
   }
 }
