video mobile test-1

--- a/app/scss/blocks/btn.scss
+++ b/app/scss/blocks/btn.scss
@@ -3,6 +3,10 @@
   border: none;
 
   cursor: pointer;
+
+  display: flex;
+  align-self: center;
+  justify-content: center;
   &__send{
     width: 100%;
     max-width: 380px;
