--- a/app/scss/blocks/_start.scss
+++ b/app/scss/blocks/_start.scss
@@ -23,7 +23,7 @@
     height: 100%;
 
     video,
-    canvas,
+
     img {
       width: 100%;
       height: 100%;
@@ -32,6 +32,10 @@
       object-position: center;
 
       pointer-events: none;
+    }
+    canvas{
+      width: 100%;
+      height: 100%;
     }
   }
 
