--- a/app/scss/blocks/_start.scss
+++ b/app/scss/blocks/_start.scss
@@ -22,7 +22,7 @@
     width: 100%;
     height: 100%;
 
-    video,
+
 
     img {
       width: 100%;
@@ -36,7 +36,11 @@
     canvas{
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      //object-fit: cover;
+    }
+    video{
+      height: 100%;
+      display: block;
     }
   }
 
