--- a/app/scss/blocks/_start.scss
+++ b/app/scss/blocks/_start.scss
@@ -39,8 +39,11 @@
       //object-fit: cover;
     }
     video{
+      width: 100%;
       height: 100%;
-      display: block;
+      object-fit: cover;
+      object-position: center;
+
     }
   }
 
