--- a/app/scss/blocks/_start.scss
+++ b/app/scss/blocks/_start.scss
@@ -23,7 +23,6 @@
     height: 100%;
 
 
-
     img {
       width: 100%;
       height: 100%;
@@ -33,16 +32,18 @@
 
       pointer-events: none;
     }
-    canvas{
+
+    canvas {
       width: 100%;
       height: 100%;
       //object-fit: cover;
     }
-    video{
+
+    video {
       width: 100%;
       height: 100%;
-      object-fit: cover;
-      object-position: center;
+      min-width: 100%;
+      min-height: 100%;
 
     }
   }
