--- a/app/scss/blocks/_start.scss
+++ b/app/scss/blocks/_start.scss
@@ -40,11 +40,10 @@
     }
 
     video {
-      width: 100%;
-      height: 100%;
+      width: auto;
+      height: auto;
       min-width: 100%;
       min-height: 100%;
-
     }
   }
 
