--- a/app/scss/blocks/_start.scss
+++ b/app/scss/blocks/_start.scss
@@ -33,11 +33,11 @@
       pointer-events: none;
     }
 
-    //canvas {
-    //  width: 100%;
-    //  height: 100%;
-    //  //object-fit: cover;
-    //}
+    canvas {
+      width: 100%;
+      height: 100%;
+      //object-fit: cover;
+    }
 
     video {
       width: auto;
