video mobile test-12

--- a/app/scss/blocks/_start.scss
+++ b/app/scss/blocks/_start.scss
@@ -15,12 +15,12 @@
   }
 
   &__bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
+    //position: absolute;
+    //top: 0;
+    //left: 0;
+    //z-index: 1;
+    //width: 100%;
+    //height: 100%;
 
 
     img {
@@ -33,18 +33,18 @@
       pointer-events: none;
     }
 
-    canvas {
-      width: 100%;
-      height: 100%;
-      //object-fit: cover;
-    }
+    //canvas {
+    //  width: 100%;
+    //  height: 100%;
+    //  //object-fit: cover;
+    //}
 
-    video {
-      width: auto;
-      height: auto;
-      min-width: 100%;
-      min-height: 100%;
-    }
+    //video {
+    //  //width: auto;
+    //  //height: auto;
+    //  //min-width: 100%;
+    //  //min-height: 100%;
+    //}
   }
 
   &__title {
@@ -63,4 +63,13 @@
     }
   }
 
+}
+.videojs-background-wrap {
+  overflow:hidden;
+  position:absolute;
+  height:100%;
+  width:100%;
+  top:0;
+  left:0;
+  z-index: 1;
 }
