--- a/app/scss/blocks/_start.scss
+++ b/app/scss/blocks/_start.scss
@@ -15,12 +15,12 @@
   }
 
   &__bg {
-    //position: absolute;
-    //top: 0;
-    //left: 0;
-    //z-index: 1;
-    //width: 100%;
-    //height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
 
 
     img {
