video mobile test-13

--- a/app/scss/blocks/_start.scss
+++ b/app/scss/blocks/_start.scss
@@ -39,12 +39,12 @@
     //  //object-fit: cover;
     //}
 
-    //video {
-    //  //width: auto;
-    //  //height: auto;
-    //  //min-width: 100%;
-    //  //min-height: 100%;
-    //}
+    video {
+      width: auto;
+      height: auto;
+      min-width: 100%;
+      min-height: 100%;
+    }
   }
 
   &__title {
