video mobile test-13

--- a/app/scss/fonts.scss
+++ b/app/scss/fonts.scss
@@ -5,7 +5,7 @@
 //@include font("Plain", "Plain Black", 900, normal);
 @font-face {
   font-family: "Vela Sans";
-  src: url("../fonts/VelaSansRegular.otf") format("opentype");
+  src: url(" fonts/VelaSansRegular.otf") format("opentype");
   font-style: normal;
   font-weight: 400;
 }
