--- a/app/scss/blocks/_about.scss
+++ b/app/scss/blocks/_about.scss
@@ -1,4 +1,9 @@
 .about {
+  padding-top: 88px;
+
+  @media(min-width: 768px) {
+    padding-top: 180px;
+  }
 
   &__info {
     margin-bottom: 60px;
@@ -105,6 +110,30 @@
     }
   }
 
+  &__title {
+    width: 100%;
+
+    margin: 0 0 20px 0;
+    padding: 0 0 38px 16px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+
+    color: #000000;
+
+    border-left: 1px solid #000000;
+
+    @media(min-width: 600px) {
+      margin-bottom: 40px;
+      padding-left: 20px;
+
+      font-size: 40px;
+      line-height: 47px;
+    }
+  }
 
   &__list {
     list-style: none;
