--- a/app/scss/blocks/_work.scss
+++ b/app/scss/blocks/_work.scss
@@ -1,10 +1,17 @@
 .work {
+  display: flex;
+
+  flex-direction: column;
+
+  justify-content: flex-start;
+  align-items: flex-start;
+
   &--mod {
     padding-bottom: 40px;
   }
 
   &__title {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 400;
@@ -13,13 +20,24 @@
     text-align: left;
     margin-bottom: 40px;
 
-    @media(min-width: 768px) {
+    @media (min-width: 768px) {
       font-size: 56px;
       line-height: 56px;
     }
   }
 
+  &__wrapper {
+    position: relative;
+
+    flex-grow: 1;
+
+    width: 100%;
+    height: fit-content;
+  }
+
   &__list {
+    width: 100%;
+
     list-style: none;
     display: grid;
     grid-template-columns: 1fr;
@@ -27,7 +45,7 @@
 
     margin-bottom: 40px;
 
-    @media(min-width: 768px) {
+    @media (min-width: 768px) {
       grid-template-columns: 1fr 1fr;
 
       row-gap: 40px;
@@ -35,14 +53,33 @@
     }
 
     &--mod {
+      position: absolute;
+
+      top: 0;
+      left: 0;
+
+      z-index: 0;
+
       margin-bottom: 0;
+
+      opacity: 0;
+
+      transition: opacity 0.5s linear;
+
+      &.active {
+        position: relative;
+
+        z-index: 1;
+
+        opacity: 1;
+      }
     }
   }
 
   &__link {
     text-decoration: none;
 
-    @media(any-hover: hover) {
+    @media (any-hover: hover) {
       &:hover {
         .work__wrap:before {
           opacity: 1;
@@ -60,7 +97,7 @@
 
   &__item {
     &-title {
-      font-family: "Roboto", sans-serif;
+      font-family: 'Roboto', sans-serif;
       font-size: 20px;
       font-style: normal;
       font-weight: 700;
@@ -70,7 +107,7 @@
       color: #000000;
       margin-bottom: 10px;
 
-      @media(min-width: 768px) {
+      @media (min-width: 768px) {
         font-size: 28px;
         line-height: 28px;
         margin-bottom: 0;
@@ -87,7 +124,7 @@
     cursor: pointer;
     transition: all 0.5s ease-in-out;
 
-    @media(min-width: 768px) {
+    @media (min-width: 768px) {
       height: 400px;
 
       overflow: hidden;
@@ -106,8 +143,6 @@
       opacity: 0;
       transition: all 0.5s ease-in-out;
     }
-
-
   }
 
   &__img {
@@ -117,7 +152,7 @@
   }
 
   &__category {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -131,7 +166,7 @@
       display: none;
     }
 
-    @media(min-width: 768px) {
+    @media (min-width: 768px) {
       &--mobile {
         display: none;
       }
@@ -148,7 +183,7 @@
         max-width: calc(100% - 48px);
       }
 
-      color: #FFFFFF;
+      color: #ffffff;
       font-size: 22px;
       line-height: 140%;
 
@@ -163,7 +198,7 @@
   &__see {
     text-decoration: none;
 
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
