--- a/app/scss/blocks/tabs.scss
+++ b/app/scss/blocks/tabs.scss
@@ -1,5 +1,4 @@
 .tabs {
-
   &__list {
     list-style: none;
 
@@ -11,7 +10,10 @@
   }
 
   &__item {
-    font-family: "Roboto", sans-serif;
+    background: none;
+    outline: none;
+    border: none;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 100;
@@ -22,7 +24,7 @@
     margin: 0 20px;
     position: relative;
     cursor: pointer;
-    &:after{
+    &:after {
       content: '';
       position: absolute;
       top: 50%;
@@ -34,21 +36,21 @@
       background: #000000;
       pointer-events: none;
     }
-    &:first-child{
+    &:first-child {
       margin-left: 0;
     }
-    &:last-child{
+    &:last-child {
       margin-right: 0;
-      &:after{
+      &:after {
         display: none;
       }
     }
-    @media(min-width: 768px) {
+    @media (min-width: 768px) {
       font-size: 20px;
       line-height: 20px;
     }
 
-    &--active {
+    &.active {
       font-weight: 400;
     }
   }
